@@ -1,5 +1,6 @@
 apod.xex
 apod.s
+app_key.s
 colorbars.s
 dlists.s
 fetch.s
