@@ -1,7 +1,7 @@
 #ifndef VERSION_H
 #define VERSION_H
 
-#define VERSION "VER. 2021-05-01"
+#define VERSION "VER. 2021-05-03"
 
 #endif // VERSION_H
 
